# si_projekt

./: .gitignore  CMakeLists.txt  ReadMe.txt  ToDo.txt  Wikipedia_finder.cpp  Wikipedia_finder.sln  Wikipedia_finder.vcxproj  Wikipedia_finder.vcxproj.filters  container.h  graf.cpp  graf.h  graf_test.cpp  graf_test.h  graf_utils.cpp  graf_utils.h  kliki_klasycznie.h  loader.cpp  loader.h  mapa_kolorow.cpp  mapa_kolorow.h  mrowki.h  stdafx.cpp  stdafx.h  utils.cpp  utils.h
